fix: now, the menu-hamburguer icon correcly hide and show, and, the menu mobile not appears if you zoon out the page, because div container's now overflow-x:hidden

--- a/assets/style.css
+++ b/assets/style.css
@@ -145,16 +145,14 @@ aside hr{
 }
 
 /******************* LAYOUT DISPOSITIVOS MÓVEIS */
-@media screen and (max-width:500px){
+@media screen and (max-width:580px){
     body{
         overflow-x:hidden;
     }
     #container{
         width:95vw;
+        overflow-x:hidden;
     }
-    /* #links a{
-        color:#fff;
-    } */
     main, main section, section article,main aside, footer{
         width:100%;
     }
